--- a/app.env
+++ b/app.env
@@ -1,3 +1,3 @@
-APP_PORT=8080
-BLUESOFT_DSN_DB='postgres://bluesoft:bluesoft@localhost/bluesoft_bank?sslmode=disable'
+APP_HTTP_PORT=8080
+BLUESOFT_URL_DB='postgres://bluesoft:bluesoft@localhost:5432/bluesoft_bank?sslmode=disable'
 MIGRATIONS_PATH='./../../internal/infrastructure/databases/postgresql/postgresql-migrations'
